<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundview"
    tools:context=".ui.view.SplahsFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="2dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:orientation="vertical">

                <LinearLayout
                    android:gravity="bottom"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/cliente"
                        android:fontFamily="@font/robotobold"
                        android:textColor="@color/titulosprincipla"
                        android:textSize="12sp" />
                    <ImageView
                        android:id="@+id/imgMenu"
                        android:layout_weight="0"
                        android:src="@drawable/iconomenu"
                        android:layout_width="25dp"
                        android:layout_height="30dp">
                    </ImageView>
                </LinearLayout>

                <TextView
                    android:background="@drawable/border_texto"
                    android:id="@+id/txtCustomers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text=""
                    android:padding="5dp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/titulos"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/documento"
                    android:fontFamily="@font/robotobold"
                    android:textColor="@color/titulosprincipla"
                    android:textSize="12sp" />
                <TextView
                    android:background="@drawable/border_texto"
                    android:id="@+id/txtDocumento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text=""
                    android:padding="5dp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/titulos"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/imgVerMas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/telefonos_disponibles"
                        android:fontFamily="@font/robotobold"
                        android:textColor="@color/titulosprincipla"
                        android:textSize="12sp"/>
                    <LinearLayout
                        android:gravity="right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:background="@drawable/button_mas"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:text=" Ver mas.."
                            android:padding="4dp"
                            android:fontFamily="@font/robotobold"
                            android:textColor="@color/white"
                            android:textSize="12sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>