<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundview"
    tools:context=".ui.view.LoginFragment">

    <RelativeLayout
        android:id="@+id/menuLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:ignore="UselessParent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout

                    android:id="@+id/form"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="150dp"
                            android:layout_height="100dp"
                            android:contentDescription="@string/logo"
                            app:srcCompat="@drawable/logoonoff"
                            tools:ignore="UseAppTint" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="30dp"
                        android:orientation="vertical">


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:gravity="center">


                            <com.google.android.material.textfield.TextInputLayout

                                style="@style/StyledTilEditText"
                                android:layout_width="match_parent"
                                android:layout_height="80dp"
                                android:baselineAlignedChildIndex="30"
                                app:hintEnabled="false"
                                app:passwordToggleContentDescription="test"
                                app:passwordToggleTint="@color/colorPrimary">

                                <EditText
                                    android:id="@+id/editUsuario"
                                    android:layout_width="match_parent"
                                    android:layout_height="50dp"
                                    android:layout_marginBottom="10dp"
                                    android:background="@drawable/borderedit"
                                    android:hint="@string/usuario"
                                    android:inputType="text"
                                    android:paddingStart="50dp"
                                    android:singleLine="true"
                                    android:textColor="@color/black"
                                    android:textColorHint="@color/colorlinea"
                                    android:textSize="16sp"
                                    tools:ignore="Autofill" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:gravity="center">

                                <ImageView
                                    android:layout_width="33dp"
                                    android:layout_height="22dp"
                                    android:contentDescription="@string/logo"
                                    android:src="@drawable/user">

                                </ImageView>

                            </LinearLayout>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp">


                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:hintEnabled="false"
                                app:passwordToggleContentDescription="test"
                                app:passwordToggleDrawable="@drawable/pwd_show"
                                app:passwordToggleEnabled="true">

                                <EditText
                                    android:id="@+id/editPassword"
                                    style="@style/StyledTilEditText"
                                    android:layout_width="match_parent"
                                    android:layout_height="50dp"
                                    android:background="@drawable/borderedit"
                                    android:hint="@string/contrase_a"
                                    android:maxLength="25"
                                    android:maxLines="1"
                                    android:paddingStart="50dp"
                                    android:singleLine="true"
                                    android:textColor="@color/black"
                                    android:textColorHint="@color/colorlinea"
                                    android:textSize="16sp"
                                    app:passwordToggleTint="@color/white"
                                    app:passwordToggleTintMode="@color/white"
                                    tools:ignore="MissingPrefix" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <LinearLayout
                                android:layout_width="40dp"
                                android:layout_height="match_parent"
                                android:gravity="center">

                                <ImageView
                                    android:layout_width="25dp"
                                    android:layout_height="25dp"
                                    android:layout_marginStart="10dp"
                                    android:contentDescription="@string/logo"
                                    android:src="@drawable/llave" />
                            </LinearLayout>

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/btnLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/button_approve"
                            android:fontFamily="@font/canaro"
                            android:gravity="center"
                            android:padding="@dimen/margin_10dp"
                            android:text="@string/ingresar"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:visibility="gone"
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/login_fragment_loading" />

    </com.facebook.shimmer.ShimmerFrameLayout>


</RelativeLayout>